# RadRenderer

./: .gitignore  CMakeLists.txt  CompileShader_GLSL_2_SPIR-V.bat  CompileShader_GLSL_2_SPIR-V.sh  GenerateProject.bat  GenerateProject.sh  GenerateProject_VS2019.bat  InstallDependencies.bat  InstallDependencies.sh  InstallPM_vcpkg.bat  LICENSE.txt  README.md  RadRenderer.code-workspace  conanfile.txt  vcpkg.json
Conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
Config/: imgui.ini
Logs/: RadRenderer_log.txt
Shader/: Default.vert
Source/Core/: Application.cpp  Application.h  CoreHeader.h  Helper.cpp  Helper.h  IModule.h  Logger.cpp  Logger.h  Main.cpp  Module.cpp  Module.h  Test.cpp
Source/Editor/: Editor.cpp  Editor.h  EditorHeader.h
Source/Renderer/: RenderDevice.cpp  RenderDevice.h  RenderObject.h  RenderPass.cpp  RenderPass.h  Renderer.cpp  Renderer.h  RendererHeader.h  SwapChain.cpp  SwapChain.h  UniformBuffer.h  Vertex.cpp  Vertex.h  VkHelper.cpp  VkHelper.h
Source/Renderer/Resources/: BaseBuffer.cpp  BaseBuffer.h  IndexBuffer.cpp  IndexBuffer.h  UniformBuffer.cpp  UniformBuffer.h  Vertex.h  VertexBuffer.cpp  VertexBuffer.h
Source/Resource/: TempResource.h
Source/World/: World.cpp  World.h  WorldHeader.h
